Fixed image on blog list page, text wrapping on large screens

--- a/_dev/src/sass/partials/_blog-post.scss
+++ b/_dev/src/sass/partials/_blog-post.scss
@@ -40,6 +40,7 @@
       }
     }
     img {
+      display: block;
       margin-top: 25px;
     }
 }
